# rust-screeps-code

./: .gitignore  .rustfmt.toml  Cargo.toml  PLANNING.md  TODO.md  client.nix  flake.nix  package-screeps.patch  rust-toolchain.toml
javascript/: main.js
persist_memory/: Cargo.toml
persist_memory/src/: lib.rs
persist_memory_derive/: Cargo.toml
persist_memory_derive/src/: lib.rs
persist_memory_test/: Cargo.toml
persist_memory_test/src/: lib.rs
src/: body.rs  lib.rs  logging.rs  memory.rs  role.rs  util.rs
src/creeps/: creep_loop.rs  early_worker.rs  energy_sink.rs  harvester.rs  memory.rs  mod.rs  role.rs  target_object.rs  worker.rs
src/managers/: city.rs  mod.rs  room_plan.rs  tasks.rs
src/memory/: main.rs  mod.rs  source.rs  spawn.rs
src/rooms/: disjoint_tile_set.rs  dist_transform.rs  min_cut.rs  mod.rs  room_cut.rs  tile_min_cut.rs  tile_slice.rs
src/storage/: cache.rs  cbor.rs  mod.rs  serialization.rs
src/util/: mod.rs  xy.rs
